--- a/gb/nf6092.md
+++ b/gb/nf6092.md
@@ -2,7 +2,6 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11739570.md#1" target="_blank">【2019盘点】时代变革 川普的九记重锤</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11739570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51345108-320x200.jpg" align ="left"></a>对美中关系来说，2019年是充满挑战和对抗的一年。过去一年中，美国川普（特朗普）政府全方位向中共出击，连发九记重锤，重挫中共霸凌气焰，成功阻止中共在海外扩张野心.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:04 PM					</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11743871.md#1" target="_blank">【独家】原大陆医生：我为何远离器官移植</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11743871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1102230313011227-150x120.jpg" align ="left"></a>钟医生是辞去国内工作出国留学的，随后开始参加了一些民运活动，包括“十一”期间的系列活动、一些研讨会，以及最近关于香港反送中的集会等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank">天津强拆世界级别墅群 数百业主走投无路</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/st.coTE9r1M0pCq-150x120.jpg" align ="left"></a>天津武清区世界级岛居别墅区翠金湖美墅岛在寒冬腊月强拆，无安置，赔偿不公，数百业主走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:18 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1" target="_blank">美国故事：国之强必先海军强</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1056886456-150x120.jpg" align ="left"></a>“一个新兴之国崛起前，必先拥有强大的海军。”129年前，美国历史学家和战略家阿尔弗雷德·马汉说，他被看作是美国现代海军之父。马汉出生于西点，父亲是西点军校早期督学长。马汉在教授世界海军史的同时，马汉在1890年出版了《海权对历史的影响》，以英国的崛起为例，阐述海军的强大是支撑英国昔日称霸世界的基石。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752526.md#1" target="_blank">【2019盘点】中共在香港问题的十大谎言</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752526.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-150x120.jpg" align ="left"></a>6月爆发的香港反送中运动，是1997年中共收回香港后，违背在香港实行“一国两制”50年不变的承诺，不断侵蚀香港的自治与自由，累积的各种矛盾的一次总爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 4:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11725027.md#1" target="_blank">【内幕】中共如何将全球港口和商船变武器</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/16/n11725027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/05/1505280313001758-150x120.jpg" align ="left"></a>没有人将集装箱船视为武器，就像911之前，没有人认为客机可以成为武器。近日，美国专家揭露，中共正在将全球供应链武器化，利用全球港口，把集装箱船变为战船，输出中共霸权势力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
@@ -19,23 +18,16 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank">【名家专栏】2020：中共性命攸关的一年</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-871930170-600x400-150x120.jpg" align ="left"></a>有句俗话说：“一只受伤的熊，要比一只健康的熊更危险。”（或者在当前情况下，是熊猫？）这句广为流传的格言背后的逻辑很简单，那就是说，甚至是软弱的对手一旦被逼入绝境，都更有可能以更加绝望和不可预测的方式行事。因此，它们可能给竞争对手带来更大的风险。当然，这只是一个概括的说法，但无疑，其中也存在着一些智慧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11742827.md#1" target="_blank">大陆江湖为何“底朝天” 专家揭秘（下）</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11742827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-600x400-1-150x120.jpg" align ="left"></a>王维洛说，自从修建三峡大坝以后，人们发现经过三峡下来的水（年水量）比原来少了10%，“它不是因为上游西藏高原源头区沙漠化后产水产得少了，最近一段时间，西藏高原由于温度的上升和冰川雪山的融化产水是增加了，上游的水比以前更多。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189412679-600x400-1-150x120.jpg" align ="left"></a>这次习近平访问澳门，澳门当局神经紧绷，祭出了史无前例的安保，唯恐担心发生意外。不过安全上倒没什么意外，但是其它地方出现了不少意外。总的来说，有一大看点和三大真相，让北京的心“拔凉拔凉”的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:05 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1" target="_blank">【独家】帮中共红色资本海外布局的神秘人物</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e0645a13e79195_ttl7dayWoN_15e05c8215f86834_ttl7daymjB_15e05a5235de68d7_ttl7dayvC7_red_twitter_1_-150x120.jpg" align ="left"></a>中共权贵阶层在海外的巨额隐密离岸资产已经广为人知，但是这些年有一位神秘的境外红色资产的操盘人物，一直被外界所忽视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11705858.md#1" target="_blank">美中关系快速恶化 学者：新冷战已开始</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11705858.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1107120756582126-600x394-600x394-150x120.jpg" align ="left"></a>从美中贸易战开始，到最近美国连续通过两个抗击中共的法案，引发中共反弹。双方关系快速恶化。有美国学者认为，美中新冷战已开始，而且会变得更冷。有观点认为，就算美中贸易达成阶段性协议，也难阻新冷战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank">【新闻看点】港警一哥赴京前喊话 民阵怒怼</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/78575841_2824595027577938_3259952848510648320_o-150x120.jpg" align ="left"></a>港警一哥临到北京前主动提到已经对民阵申请的12月8日（周日）游行发出了“不反对通知书”。说如果当天有暴力事件发生，民阵“应拿出勇气谴责”。在今天下午的记者会上，民阵召集人岑子杰对邓炳强进行了呛声。他反问“港警一哥”：“有没有勇气先谴责警暴？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706171.md#1" target="_blank">王友群：解体中共的重大事件接连发生</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706171.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1307132120352039-150x120.jpg" align ="left"></a>近日，美国的中国问题专家、宾夕法尼亚大学教授林蔚在接受英文《大纪元时报》专访时披露，一个习近平身边的高层幕僚告知，中共内部承认正在走向解体。事实确实如此。目前，中共正面临有史以来最大的全面危机，解体中共的重大事件，正以高频率接连发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706071.md#1" target="_blank">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zhangshangwu-150x120.jpg" align ="left"></a>大陆多家媒体披露，世界体操冠军张尚武因为扒窃，已经再度入狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11704130.md#1" target="_blank">【十字路口】房企集体破产 中国债务风暴来袭</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11704130.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15ddce716daa9734_ttl7day74H_20191206-____-DJY-150x120.jpg" align ="left"></a>中国债务危机有多惊人？房企集体破产，会引爆中国金融海啸？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/4/n11701247.md#1" target="_blank">中美贸易鏖战一年 谁家GDP受冲击更大</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/4/n11701247.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/00-beijing-Construction-GettyImages-831734914-150x120.jpg" class=" align ="left"></a>年末已近，代表一年经济成绩的GDP又成热点，尤其是中美贸易战愈演愈烈，谁家GDP受冲击更大，成为各方关心的话题。
-
-近期，中共将去年GDP上调2.1%，结果引发外界忧心中国经济前景；而美国也修订GDP，将三季度GDP增速上调至2.1%，市场却因此信心大增，经济增长放缓的阴云顷刻间被驱散。
-
-为何同是修订GDP，外界反应迥异？又为何中共6%的GDP增速.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 9:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11703912.md#1" target="_blank">郑若骅传以伤避难 中途退场触怒中共</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11703912.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1906101124101366-150x120.jpg" align ="left"></a>“消失”两周多，香港律政司司长郑若骅12月3日晚上返港，在机场的记者会上，郑神色疲惫，念稿汇报伤情以及回答提问后匆匆离去。其间透露曾“被送中”，在北京治疗，言语间多处言不由衷。大陆流亡富商郭文贵爆料指，郑曾两度请辞遭拒，这次是“被绑架回京”，被要求强行撑下去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank">对民企能不捕的不捕 中共最高检言论遭轰</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>据中共官媒报导，中共最高检长张军3日在参加最高检开放日活动时声称要“保护民营企业合法权益”，提出“对涉嫌犯罪的民营企业负责人能不捕的不捕，能不诉的不诉，能缓刑的缓刑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11701957.md#1" target="_blank">【内幕】华为打压多名员工 或涉及核心秘密</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/5/n11701957.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1905241928522384-150x120.jpg" align ="left"></a>华为李洪元事件后，再有知情人爆料，其被抓可能是因知晓华为违反美国禁运令的核心秘密。该知情人表示，还有其他员工被抓或被失踪至今。
-李洪元事件或涉违反禁运核心秘密
-中国公益机构“长沙富能”联合创办人杨占青，因曾与部分华为离职员工在一个微信群组，故而了解一些华为事件的内幕。
-
-他告诉大纪元，李洪元的罪名从“泄露商业机密”转为涉嫌“敲诈勒索”，很有可能因为其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735005.md#1" target="_blank">【2019盘点】中共战狼外交遭打脸十瞬间</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/0167055816d2d30c5a94d96696748b35-600x400-1-1-150x120.jpg" align ="left"></a>近年来，中共“战狼式”外交备受外界诟病，也使它越来越孤立。2019年以来，有十大外交事件让中共频被打脸，也引发西方各国全面反击中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738852.md#1" target="_blank">圣诞卡求救信发酵 乐购暂停从中国进货</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/22/n11738852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1KV351-150x120.jpg" align ="left"></a>英国超市巨头乐购（Tesco）周日（12月22日）宣布，暂停从一家圣诞卡中国供应商采购。在此之前，英媒披露，一名英国女孩在从乐购购买的圣诞卡上发现一则来自上海青浦监狱外国囚犯发出的求救信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/10/n11714545.md#1" target="_blank">【内幕】透过王立强案 看中共军方情报系统</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/10/n11714545.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d3285aa02fa5e16e1ffbbe6c74cbb230-1-150x120.jpg" align ="left"></a>前中共间谍王立强投诚，目前正在澳大利亚寻求政治庇护。当澳洲国家媒体在11月23日突发对他的采访报导，曝光他所知的具体内幕时，中共间谍活动、特别是中共军方在间谍活动中承担的角色便成为各界关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 9:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733786.md#1" target="_blank">【内幕】小马奔腾翻车 车峰吞噬数字王国</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733786.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1507ffd4f2d45bd4_ttl7dayKII_2-tian_anmen-GettyImages-146038593-600x400-150x120.jpg" align ="left"></a>《大纪元时报》日前独家披露了神秘红三代操盘中共权贵海外资产的内幕。该报导揭示了中共权贵家族已渗透全球，通过操纵大陆和香港金融市场，在资本市场上兴风作浪，将海内外的各类公司、尤其是中国民企当作狩猎目标，牟取暴利。其中提到的曾名噪一时的大陆影视明星企业“小马奔腾”，其由兴到衰继而夭折的经历，正是中共与民企间“中国式关系”的缩影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 8:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737119.md#1" target="_blank">大陆江湖为何“底朝天” 专家揭秘（上）</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11737119.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sss-150x120.jpg" align ="left"></a>中国大陆枯水期来临之际，长江中下游武汉段出现了沿江滩涂的荒凉景象，甚至一些地段的江底湖底都露了出来，引发网民关注。那么，江底湖底朝天是什么原因所致？这个原因又将带来哪些生态恶果？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank">蓬佩奥：中国人民正在抵制共产党</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/21/n11736961.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190621222928100699-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥（Mike Pompeo）在周三（12月18日）表示，中国人民与中国共产党不同。中国人民希望生活在自由的社会，也不支持共产党。他们正在抵制中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735719.md#1" target="_blank">2020年灰天鹅事件 美国对华实行资本管制</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/20/n11735719.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20120809NYSE-BENC4077-600x400-150x120.jpg" align ="left"></a>2020年最大的灰天鹅事件会有哪些？让投资人紧张的是，随着美中贸易战深入、美国或对中国实行资本管制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706347.md#1" target="_blank">反送中和六四事件 美政府应对措施对比</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280850072188-150x120.jpg" align ="left"></a>美国政界对香港的支持远远超过30年前，《香港人权与民主法案》从提出到最后成为法律历时不到半年，比1992年的《美国-香港法案》所耗时间短了一半，同时总统也在更短时间内签字、让法案生效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733260.md#1" target="_blank">【新闻看点】人人留影 中共监控网世界独有</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140216591758-150x120.jpg" align ="left"></a>习近平近日访问澳门，当地管控空前，外界质疑，澳门可能已经成了“秘密警察社会”。不过澳门的这些措施，跟中国大陆相比还是相形见绌，小巫见大巫。《纽约时报》指出，中国正在逐步整合新旧科技，加强对人民的监控，使地方公安权力越来越大，如同是一个小型的国家安全局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733596.md#1" target="_blank">中共操控香港商圈生死 经济早被划黄蓝</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11733596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191220A01sample4_cut-150x120.jpg" align ="left"></a>“反送中”运动持续半年，过程中出现了“装修”蓝店、“惩罚”黄店等反话式呼吁，最近出现的“黄色经济圈”一词亦渐渐成为社会关注的话题。有抗争者认为，帮衬“黄店”是一种最低成本的抗争。香港商务及经济发展局长邱腾华，12月17日于商经局脸书（Facebook）专页Live与网民交流时，提出“经济凭什么分黄蓝”质疑。著名时事评论员、“香江第一才子”陶杰于个人脸书对邱腾.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 5:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank">四大原因 北京被迫同意第一阶段贸易协议</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/19/n11731502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1152458129-600x400-1-150x120.jpg" align ="left"></a>美中贸易战开打逾一年半后，双方终于达成了第一阶段的贸易文本协议，等待双方代表签署。中共被指对此作出巨大让步，那么中共让步的背后原因是什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 5:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf6092.htm">http://www.epochtimes.com/gb/nf6092.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
